tests/ui/liveness/liveness-unused.stderr
warning: unreachable statement
  --> $DIR/liveness-unused.rs:117:9
   |
LL |         continue;
   |         -------- any code following this expression is unreachable
LL |         drop(*x as i32);
   |         ^^^^^^^^^^^^^^^^ unreachable statement
   |
note: the lint level is defined here
  --> $DIR/liveness-unused.rs:1:9
   |
LL | #![warn(unused)]
   |         ^^^^^^
   = note: `#[warn(unreachable_code)]` implied by `#[warn(unused)]`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:9:7
   |
LL | fn f1(x: isize) {
   |       ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
note: the lint level is defined here
  --> $DIR/liveness-unused.rs:2:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:13:8
   |
LL | fn f1b(x: &mut isize) {
   |        ^ help: if this is intentional, prefix it with an underscore: `_x`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:21:9
   |
LL |     let x: isize;
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:26:9
   |
LL |     let x = 3;
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`

error: variable `x` is assigned to, but never used
  --> $DIR/liveness-unused.rs:31:9
   |
LL |     let mut x = 3;
   |         ^^^^^
   |
   = note: consider using `_x` instead

error: value assigned to `x` is never read
  --> $DIR/liveness-unused.rs:33:5
   |
LL |     x += 4;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?
note: the lint level is defined here
  --> $DIR/liveness-unused.rs:3:9
   |
LL | #![deny(unused_assignments)]
   |         ^^^^^^^^^^^^^^^^^^

error: variable `z` is assigned to, but never used
  --> $DIR/liveness-unused.rs:38:9
   |
LL |     let mut z = 3;
   |         ^^^^^
   |
   = note: consider using `_z` instead

error: variable `z` is assigned to, but never used
  --> $DIR/liveness-unused.rs:60:9
   |
LL |     let mut z = 3;
   |         ^^^^^
   |
   = note: consider using `_z` instead

error: unused variable: `i`
  --> $DIR/liveness-unused.rs:69:12
   |
LL |       Some(i) => {
   |            ^ help: if this is intentional, prefix it with an underscore: `_i`

error: unused variable: `i`
  --> $DIR/liveness-unused.rs:82:14
   |
LL |       tri::a(i) | tri::b(i) | tri::c(i) => {
   |              ^           ^           ^
   |
help: if this is intentional, prefix it with an underscore
   |
LL |       tri::a(_i) | tri::b(_i) | tri::c(_i) => {
   |              +            +            +

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:104:9
   |
LL |     for x in 1..10 { }
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:109:10
   |
LL |     for (x, _) in [1, 2, 3].iter().enumerate() { }
   |          ^ help: if this is intentional, prefix it with an underscore: `_x`

error: unused variable: `x`
  --> $DIR/liveness-unused.rs:114:13
   |
LL |     for (_, x) in [1, 2, 3].iter().enumerate() {
   |             ^ help: if this is intentional, prefix it with an underscore: `_x`

error: variable `x` is assigned to, but never used
  --> $DIR/liveness-unused.rs:137:9
   |
LL |     let x;
   |         ^
   |
   = note: consider using `_x` instead

error: value assigned to `x` is never read
  --> $DIR/liveness-unused.rs:141:9
   |
LL |         x = 0;
   |         ^^^^^
   |
   = help: maybe it is overwritten before being read?

error: variable `a` is assigned to, but never used
  --> $DIR/liveness-unused.rs:170:9
   |
LL |     let mut a = 10;
   |         ^^^^^
   |
   = note: consider using `_a` instead

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:186:5
   |
LL |     a %= h;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: variable `a` is assigned to, but never used
  --> $DIR/liveness-unused.rs:212:9
   |
LL |     let mut a = 10.;
   |         ^^^^^
   |
   = note: consider using `_a` instead

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:224:5
   |
LL |     a %= f;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: variable `a` is assigned to, but never used
  --> $DIR/liveness-unused.rs:228:11
   |
LL | fn f10<T>(mut a: T, b: T) {
   |           ^^^^^
   |
   = note: consider using `_a` instead

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:230:5
   |
LL |     a = b;
   |     ^
   |
   = help: maybe it is overwritten before being read?

error: variable `a` is assigned to, but never used
  --> $DIR/liveness-unused.rs:234:12
   |
LL | fn f10b<T>(mut a: Box<T>, b: Box<T>) {
   |            ^^^^^
   |
   = note: consider using `_a` instead

error: value assigned to `a` is never read
  --> $DIR/liveness-unused.rs:235:5
   |
LL |     a = b;
   |     ^
   |
   = help: maybe it is overwritten before being read?

error: aborting due to 23 previous errors; 1 warning emitted

